--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.7.0",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-financial": "^0.2.1",
+    "chartjs-plugin-crosshair": "^2.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "csrf-token": "^1.1.0",
     "dotenv": "^16.4.5",
