--- a/frontend/src/.gitignore
+++ b/frontend/src/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+# Ignore node_modules directories at all levels
+**/node_modules/
 /node_modules
 /.pnp
 .pnp.js
